[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/objects/challengemenu5/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/challenges_menu/ChallengeMenu5.gd" type="Script" id=2]
[ext_resource path="res://assets/challenges_menu/challenge5/bg.png" type="Texture" id=3]
[ext_resource path="res://assets/challenges_menu/score_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/challenges_menu/challenge3/hourglass.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/BarlowCondensed-BlackItalic.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="ChallengeMenu5" type="Node2D"]
script = ExtResource( 2 )

[node name="Bg" type="Sprite" parent="."]
modulate = Color( 0.670588, 0.670588, 0.670588, 1 )
scale = Vector2( 1.33333, 1.125 )
texture = ExtResource( 3 )
centered = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="TestButton" type="Button" parent="UI"]
visible = false
margin_left = 1164.0
margin_top = 24.0
margin_right = 1255.0
margin_bottom = 44.0
text = "MAIN MENU"

[node name="ScoreLabel" type="Label" parent="UI"]
margin_left = 1160.0
margin_top = 32.0
margin_right = 1257.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 3 )
text = "0"
valign = 1

[node name="ScoreIcon" type="Sprite" parent="UI"]
position = Vector2( 1125, 52 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )

[node name="TimerLabel" type="Label" parent="UI"]
margin_left = 79.0
margin_top = 32.0
margin_right = 176.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 3 )
text = "0"
valign = 1

[node name="TimerIcon" type="Sprite" parent="UI"]
position = Vector2( 52, 51 )
scale = Vector2( 0.593752, 0.593752 )
texture = ExtResource( 5 )

[node name="Ysort" type="YSort" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 647, 373 )

[node name="CoinsTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="StageTimer" type="Timer" parent="."]

[connection signal="pressed" from="UI/TestButton" to="." method="_on_TestButton_pressed"]
[connection signal="timeout" from="CoinsTimer" to="." method="_on_CoinsTimer_timeout"]
[connection signal="timeout" from="StageTimer" to="." method="_on_StageTimer_timeout"]
